--- a/package.json
+++ b/package.json
@@ -3,24 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 7755",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port 7755",
     "lint": "next lint"
   },
   "dependencies": {
+    "@uniformdev/canvas": "^19.147.0",
+    "@uniformdev/canvas-next": "^19.147.0",
+    "@uniformdev/canvas-react": "^19.147.0",
+    "@uniformdev/project-map": "^19.147.0",
+    "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5"
   }
 }
