--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@uniformdev/canvas": "^19.147.0",
     "@uniformdev/canvas-next": "^19.147.0",
     "@uniformdev/canvas-react": "^19.147.0",
+    "@uniformdev/cli": "^19.149.0",
     "@uniformdev/project-map": "^19.147.0",
     "next": "14.2.3",
     "react": "^18",
